Add core structure to site

--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
 </head>
 <body>
     <h1>header content</h1>
-    <section>main image</section>
-    <section></section>
-    <section></section>
+    <section>
+        main image
+    </section>
+    <section>
+        club ethos
+    </section>
+    <section>
+        running locations, distances and times
+    </section>
+
+    <footer>
+        social links here
+    </footer>
     
 </body>
 </html>
