--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>header content</h1>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+    </header>
     <section>
         main image
     </section>
