--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +10,18 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">
             <h1>Love Running</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Sign Up</a></li>
+                </ul>
+            </nav>
         </a>
     </header>
     <section>
@@ -28,6 +37,7 @@
     <footer>
         social links here
     </footer>
-    
+
 </body>
+
 </html>
