--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </a>
     </header>
     <section>
-        main image
+        <div id="hero-image"> 
+        
+        </div>
     </section>
     <section>
         club ethos
