Add hero image animation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
         </a>
     </header>
-    <section>
+    <section id="hero-outer">
         <div id="hero-image"> 
         
         </div>
