--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     </header>
     <section id="hero-outer">
         <div id="hero-image"> 
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands and Pheonix Park</h3>
+            </div>
         
         </div>
     </section>
